name:                scotty-test
version:             0.1.0.0
synopsis:            Simple REST KV storage service example implemented in haskell
-- description:
homepage:            https://github.com/sitano/scotty-test
bug-reports:         https://github.com/sitano/scotty-test/issues
license:             MIT
license-file:        LICENSE
-- author:
maintainer:          Ivan Prisyazhniy <john.koepi@gmail.com>
-- copyright:
category:            Web
stability:           experimental
build-type:          Simple
cabal-version:       >= 1.8

Extra-source-files:
  README.md

executable scotty-test
  main-is:             Main.hs
  -- other-modules:
  default-language:    Haskell2010
  GHC-options:         -Wall -fno-warn-orphans
  build-depends:       base == 4.6.*,
                       transformers,
                       scotty,
                       wai-extra,
                       blaze-html,
                       http-types,
                       text

source-repository head
  type:     git
  location: git://github.com/sitano/scotty-test.git
